k8s/policies/netpol-allow-svcs-db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-db-from-api-and-auth
  namespace: db
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: api
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: auth
  policyTypes:
    - Ingress
